--- a/slides/01-getting-started-slides.html
+++ b/slides/01-getting-started-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>Introduction to R Workshop</title>
+    <title>R for Evaluation</title>
     <meta charset="utf-8" />
     <meta name="author" content="R for the Rest of Us" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
@@ -13,7 +13,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Introduction to R Workshop
+# R for Evaluation
 ### R for the Rest of Us
 
 ---
@@ -222,7 +222,7 @@ Enter the following into the console pane:
 ```r
 install.packages("usethis")
 library(usethis)
-use_course("https://rfortherestofus.com/workshop-materials/")
+use_course("https://rfortherestofus.com/aea-workshop-materials/")
 ```
 
 
@@ -742,13 +742,13 @@ skim(faketucky)
 ##  n obs: 57855 
 ##  n variables: 12 
 ## 
-## ── Variable type:character ──────────────────────────────────────────────────────────────────────────────────────────────────
+## ── Variable type:character ───────────────────────────────────────────────────────────────
 ##                    variable missing complete     n min max empty n_unique
 ##  first_high_school_attended       0    57855 57855   4  14     0      393
 ##              race_ethnicity     794    57061 57855   5  24     0        5
 ##             school_district       0    57855 57855   4  13     0      171
 ## 
-## ── Variable type:numeric ────────────────────────────────────────────────────────────────────────────────────────────────────
+## ── Variable type:numeric ─────────────────────────────────────────────────────────────────
 ##                      variable missing complete     n     mean       sd p0
 ##                act_math_score       0    57855 57855   257.85   420.77  1
 ##             act_reading_score       0    57855 57855   258.78   420.65  2
