--- a/slides/01-getting-started-slides.html
+++ b/slides/01-getting-started-slides.html
@@ -45,19 +45,8 @@ class: center, middle, inverse, dk-section-title
 
 # Introductions
 
-1. Name 
+Please share your name and organization with people at your table
 
---
-
-1. Organization
-
---
-
-1. Why you want to learn R
-
---
-
-1. Share a **boring** fact about yourself
 
 
 ---
@@ -86,7 +75,7 @@ class: center, middle, inverse, dk-section-title
 
 1. Data Visualization
 
--- 
+--
 
 1. Make a Report in RMarkdown!
 
@@ -742,21 +731,13 @@ skim(faketucky)
 ##  n obs: 57855 
 ##  n variables: 12 
 ## 
-<<<<<<< HEAD
 ## ── Variable type:character ───────────────────────────────────────────────────────────────
-=======
-## ── Variable type:character ───────────────────────────────────────────────────────────────────────────────
->>>>>>> 85817149a8094878bcd6894d54606d4c5dd5df92
 ##                    variable missing complete     n min max empty n_unique
 ##  first_high_school_attended       0    57855 57855   4  14     0      393
 ##              race_ethnicity     794    57061 57855   5  24     0        5
 ##             school_district       0    57855 57855   4  13     0      171
 ## 
-<<<<<<< HEAD
 ## ── Variable type:numeric ─────────────────────────────────────────────────────────────────
-=======
-## ── Variable type:numeric ─────────────────────────────────────────────────────────────────────────────────
->>>>>>> 85817149a8094878bcd6894d54606d4c5dd5df92
 ##                      variable missing complete     n     mean       sd p0
 ##                act_math_score       0    57855 57855   257.85   420.77  1
 ##             act_reading_score       0    57855 57855   258.78   420.65  2
