Ready for special session

--- a/slides/01-getting-started-slides.html
+++ b/slides/01-getting-started-slides.html
@@ -3,7 +3,7 @@
   <head>
     <title>R for Evaluation</title>
     <meta charset="utf-8" />
-    <meta name="author" content="R for the Rest of Us" />
+    <meta name="author" content="David Keyes // R for the Rest of Us" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
     <script src="libs/pagedtable-1.1/js/pagedtable.js"></script>
@@ -14,7 +14,7 @@
 class: center, middle, inverse, title-slide
 
 # R for Evaluation
-### R for the Rest of Us
+### David Keyes // R for the Rest of Us
 
 ---
 
@@ -187,6 +187,12 @@ Download RStudio at the [RStudio website](https://www.rstudio.com/products/rstud
 ![](images/rstudio-cloud.png)
 
 ---
+
+class: middle
+
+# https://rstudio.cloud/project/693829
+
+--
 
 ### Tour of RStudio
 
